# stdlib

./: .gitignore  Makefile  default.nix  dune-project  rocq-stdlib.opam  rocq-stdlib.opam.template
doc/stdlib/: Library.tex  depends.dot  dune  hidden-files  index-list.html.template  index.html
theories/: All.sh  All.v  Make.compat  Make.field  Make.integers  Make.lia  Make.lists  Make.logic  Make.lqa  Make.nsatz  Make.qarith  Make.reals  Make.ring  Make.sorting  Make.zarith  Make.zmod  Makefile  Makefile.coq.local  Version.v  _CoqProject  dune
theories/All/: All.v
theories/Arith/: Arith_base.v  Between.v  Bool_nat.v  Compare.v  Compare_dec.v  EqNat.v  Euclid.v  Factorial.v  PeanoNat.v  Peano_dec.v  Wf_nat.v  Zerob.v
theories/Array/: PArray.v
theories/BinNums/: NatDef.v  PosDef.v  RatDef.v
theories/Bool/: Bool.v  IfProp.v
theories/Classes/: CEquivalence.v  DecidableClass.v  EquivDec.v  RelationPairs.v  SetoidClass.v  SetoidDec.v
theories/Compat/: Fin92.v  Vector92.v
theories/FSets/: FMapAVL.v  FMapFacts.v  FMapFullAVL.v  FMapInterface.v  FMapList.v  FMapPositive.v  FMapWeakList.v  FSetBridge.v  FSetCompat.v  FSetDecide.v  FSetEqProperties.v  FSetFacts.v  FSetInterface.v  FSetList.v  FSetPositive.v  FSetProperties.v  FSetToFiniteSet.v  FSetWeakList.v
theories/Floats/: FloatLemmas.v
theories/Lists/: Finite.v  List.v  ListDec.v  ListDef.v  ListSet.v
theories/Logic/: Adjointification.v  Berardi.v  ChoiceFacts.v  ClassicalChoice.v  ClassicalDescription.v  ClassicalEpsilon.v  ClassicalFacts.v  ClassicalUniqueChoice.v  Classical_Pred_Type.v  Classical_Prop.v  ConstructiveEpsilon.v  Decidable.v  Diaconescu.v  Eqdep.v  EqdepFacts.v  Eqdep_dec.v  ExtensionalityFacts.v  HLevels.v  Hurkens.v  JMeq.v  PropExtensionalityFacts.v  PropFacts.v  WKL.v  WeakFan.v
theories/MSets/: MSetAVL.v  MSetDecide.v  MSetEqProperties.v  MSetFacts.v  MSetGenTree.v  MSetInterface.v  MSetList.v  MSetPositive.v  MSetProperties.v  MSetRBT.v  MSetToFiniteSet.v  MSetWeakList.v
theories/NArith/: BinNat.v  BinNatDef.v  NArith_base.v  Ndec.v  Ndiv_def.v  Ngcd_def.v  Nnat.v
theories/Numbers/: DecimalFacts.v  DecimalN.v  DecimalNat.v  DecimalPos.v  DecimalR.v  DecimalString.v  DecimalZ.v  HexadecimalFacts.v  HexadecimalN.v  HexadecimalNat.v  HexadecimalPos.v  HexadecimalR.v  HexadecimalString.v  HexadecimalZ.v  NaryFunctions.v
theories/PArith/: BinPos.v  BinPosDef.v  POrderedType.v  Pnat.v
theories/Program/: Combinators.v  Equality.v  Subset.v  WfExtensionality.v
theories/QArith/: QArith.v  QArith_base.v  QNsatz.v  QOrderedType.v  Qabs.v  Qcanon.v  Qfield.v  Qminmax.v  Qpower.v  Qreduction.v  Qround.v
theories/Reals/: Alembert.v  AltSeries.v  ArithProp.v  Binomial.v  Cauchy_prod.v  ClassicalConstructiveReals.v  ClassicalDedekindReals.v  Cos_plus.v  Cos_rel.v  DiscrR.v  Exp_prop.v  MVT.v  Machin.v  NewtonInt.v  Nsatz.v  PSeries_reg.v  PartSum.v  Qreals.v  RIneq.v  RList.v  RNsatz.v  ROrderedType.v  R_Ifp.v  R_sqr.v  R_sqrt.v  Ranalysis1.v  Ranalysis2.v  Ranalysis3.v  Ranalysis4.v  Ranalysis5.v  Ranalysis_reg.v  Ratan.v  Raxioms.v  Rbasic_fun.v  Rcomplete.v  Rdefinitions.v  Rderiv.v  Rfunctions.v  Rgeom.v  RiemannInt.v  (+21 more)
theories/Relations/: Operators_Properties.v  Relation_Definitions.v  Relation_Operators.v  Relations.v
theories/Sets/: Integers.v  Partial_Order.v  Powerset.v  Powerset_facts.v  Relations_1_facts.v  Relations_2.v  Relations_2_facts.v  Relations_3_facts.v  Uniset.v
theories/Sorting/: CPermutation.v  Heap.v  Mergesort.v  PermutEq.v  PermutSetoid.v  Permutation.v  SetoidList.v  SetoidPermutation.v  Sorted.v
theories/Streams/: StreamMemo.v  Streams.v
theories/Strings/: Ascii.v  BinaryString.v  (+5 more)
(+433 files in other folders)
