(include_subdirs qualified)
(coq.theory
 (name Stdlib)
 (package rocq-stdlib))

(env
 (dev
  (coq
   ;; see theories/_CoqProject for details
   (flags :standard -w -notation-for-abbreviation -w -ltac2-notation-for-abbreviation))))

(rule
 (targets All.v)
 (deps All.sh (source_tree .))
 ; -unsorted: coqdep will want the .vo for the corelib to be present
 ; we could depend on rocq-core instead
 (action (with-stdout-to %{targets} (run env bash ./All.sh -unsorted))))
