(include_subdirs qualified)
(coq.theory
 (name Stdlib)
 (package rocq-stdlib)
 (theories micromega_plugin))

(env
 (dev
  (coq
   ;; see theories/_CoqProject for details
   (flags :standard -w -notation-for-abbreviation -w -ltac2-notation-for-abbreviation -w -implicit-create-hint-db -w -implicit-create-rewrite-hint-db -w -register-all -w -scheme-rewriting))))
